--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,25 +6,19 @@
     <div class="tech">
       <h2>Design</h2>
       <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-css3-plain-wordmark colored"></i>
+      <p>Tools for creating beautiful websites and pages.</p>
     </div>
     <div class="tech">
       <h2>Code</h2>
       <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-python-plain colored"></i>
+      <p>Programming languages for data analisys and internet.</p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-atom-original colored"></i>
+      <p>Development tools that make my a little bit life easier.</p>
     </div>
 </div>
