--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,12 +13,12 @@
       <h2>Code</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-python-plain colored"></i>
-      <p>Programming languages for data analisys and internet.</p>
+      <p>Programming languages for data analisys and web programming.</p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-atom-original colored"></i>
-      <p>Development tools that make my a little bit life easier.</p>
+      <p>Development tools that make my life a little bit easier.</p>
     </div>
 </div>
