--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,10 +6,10 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
+    <h3> TwitData </h3>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>TwitData is a simple web application that geolocates tweets on a map - wether you search by user, hashtag or trending topics. It’s a simple and fast way to find out what user are talking about somewhere - or where they are talking about something.</p>
+    <a class="project-link" href="https://twit-data.herokuapp.com/">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
