--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/twitdata.jpg" | prepend: site.baseurl }}" />
+    <img alt="map" src="{{ "/assets/img/twitdata.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> TwitData </h3>
@@ -14,7 +14,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="tableau" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Project Title </h3>
