--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
       <h1>
         <span class="site-title">{{site.username}}</span>
         <br>
-        <span class="site-description">Data Journalist and Media Researcher</span>
+        <span class="site-description">I'm a Media Researcher and Programmer</span>
 
       </h1>
       <div class="header-icons">
