adicionada versao em ingles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,9 @@
   <div class="header">
       <h1>
         <span class="site-title">{{site.username}}</span>
+        <!-- <br> -->
         <br>
-        <span class="site-description">I'm a Media Researcher and Programmer</span>
+        <span class="site-description">Sou um pesquisador de mídia e programador</span>
 
       </h1>
       <div class="header-icons">
@@ -12,6 +13,12 @@
         <a aria-label="My Github" target="_blank" href="https://github.com/danielfeloiola"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
 
+      <div class="header-links">
+        <!-- <a class="link" href="#about" data-scroll>About Me</a>-->
+
+        <a class="link" rel="alternate" href="https://danielfeloiola.github.io/" hreflang="pt"><u>Português</u></a> /
+        <a class="link" rel="alternate" href="https://danielfeloiola.github.io/en" hreflang="en">English</a>
+      </div>
   </div>
-  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
+  <!--<a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>-->
 </div>
