--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,5 +1,5 @@
 <div class="user-details">
-  <h1> Featured Projects </h1>
+  <h1> Projetos </h1>
 </div>
 <div class="user-projects">
   <div class="images-right">
@@ -8,18 +8,18 @@
   <div class="contents">
     <h3> TwitData </h3>
 
-    <p>TwitData is a simple web application that geolocates tweets on a map - wether you search by user, hashtag or trending topics. It’s a simple and fast way to find out what user are talking about somewhere - or where they are talking about something.</p>
-    <a class="project-link" href="https://twit-data.herokuapp.com/">Check it out</a>
+    <p>TwitData é um simples aplicativo web que geolocaliza tweets em um mapa - permitindo buscas por usuário, hashtag ou trending topic. É uma maneira rápida de descobrir sobre o que estão falando em algum lugar, ou onde estão falando de algo.</p>
+    <a class="project-link" href="https://twit-data.herokuapp.com/">Visitar</a>
   </div>
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="tableau" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="youtube-data" src="{{ "/assets/img/ytd.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
+    <h3> YouTube Data </h3>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>O YouTube Data é uma ferramenta web que faz simples coletas e visualizações de dados atravéas da API do YouTube, mostrando os videos mais recomendados para um tópico específico. Também possui uma função de análise de redes sem a necessidade de download dos dados.</p>
+    <a class="project-link" href="https://youtubedataapp.herokuapp.com/">Visitar</a>
   </div>
 </div>
