--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
  <div class="user-details">
-  <h1> My Expertise </h1>
+  <h1> Eperiência </h1>
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
@@ -7,18 +7,18 @@
       <h2>Design</h2>
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-css3-plain-wordmark colored"></i>
-      <p>Tools for creating beautiful websites and pages.</p>
+      <p>HTML e CSS para criar páginas da web.</p>
     </div>
     <div class="tech">
-      <h2>Code</h2>
+      <h2>Código</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-python-plain colored"></i>
-      <p>Programming languages for data analisys and web programming.</p>
+      <p>Python e JavaScript para análise de dados e desenvolvimento web.</p>
     </div>
     <div class="tech">
-      <h2>Tools</h2>
+      <h2>Ferramentas</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-atom-original colored"></i>
-      <p>Development tools that make my life a little bit easier.</p>
+      <p>Git e Atom para facilitar a minha vida.</p>
     </div>
 </div>
