--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -20,6 +20,6 @@
     <h3> YouTube Data </h3>
 
     <p>O YouTube Data é uma ferramenta web que faz simples coletas e visualizações de dados atravéas da API do YouTube, mostrando os videos mais recomendados para um tópico específico. Também possui uma função de análise de redes sem a necessidade de download dos dados.</p>
-    <a class="project-link" href="https://youtubedataapp.herokuapp.com/">Visitar</a>
+    <a class="project-link" href="https://ytd-cloud.herokuapp.com/">Visitar</a>
   </div>
 </div>
