--- a/en/_includes/projects.html
+++ b/en/_includes/projects.html
@@ -1,6 +1,7 @@
 <div class="user-details">
   <h1> Featured Projects </h1>
 </div>
+
 <div class="user-projects">
   <div class="images-right">
     <img alt="map" src="/assets/img/twitdata.jpg" />
@@ -12,6 +13,7 @@
     <a class="project-link" href="https://twit-data.herokuapp.com/">Check it out</a>
   </div>
 </div>
+
 <div class="user-projects">
   <div class="images-left">
     <img alt="youtube-data" src="/assets/img/ytd.jpg" />
@@ -21,5 +23,17 @@
 
     <p>YouTube Data is a web application to make simple data collections as visualizations via the YouTube API, showing what videos are more recommended for a specific search query. It also has a networks analisys function that don't require downloading the data.</p>
     <a class="project-link" href="https://ytd-cloud.herokuapp.com/">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="map" src="/assets/img/twitdata.jpg" />
+  </div>
+  <div class="contents">
+    <h3> Puppybot </h3>
+
+    <p> Puppybot is a Twitter bot that retweets images of puppies! It can filter ugly images (like pictures of cats, for instance) using TensorFlow. It was developed using Python.</p>
+    <a class="project-link" href="https://twitter.com/apuppybot/">Pet</a>
   </div>
 </div>
