--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,7 @@
 <div class="user-details">
   <h1> Projetos </h1>
 </div>
+
 <div class="user-projects">
   <div class="images-right">
     <img alt="map" src="{{ "/assets/img/twitdata.jpg" | prepend: site.baseurl }}" />
@@ -12,6 +13,7 @@
     <a class="project-link" href="https://twit-data.herokuapp.com/">Visitar</a>
   </div>
 </div>
+
 <div class="user-projects">
   <div class="images-left">
     <img alt="youtube-data" src="{{ "/assets/img/ytd.jpg" | prepend: site.baseurl }}" />
@@ -21,5 +23,17 @@
 
     <p>O YouTube Data é uma ferramenta web que faz simples coletas e visualizações de dados atravéas da API do YouTube, mostrando os videos mais recomendados para um tópico específico. Também possui uma função de análise de redes sem a necessidade de download dos dados.</p>
     <a class="project-link" href="https://ytd-cloud.herokuapp.com/">Visitar</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="map" src="{{ "/assets/img/twitdata.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Puppybot </h3>
+
+    <p>O Puppybot é um robô que faz retweet de imagens de cahorrinhos. Ele faz o reconhecimento de imagens indevidas (como de gatos, por exemplo) utilizando TensorFlow. Foi desenvolvido utilizando Python.</p>
+    <a class="project-link" href="https://twitter.com/apuppybot/">Fazer carinho</a>
   </div>
 </div>
