--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -28,7 +28,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="map" src="{{ "/assets/img/twitdata.jpg" | prepend: site.baseurl }}" />
+    <img alt="puppy robot" src="{{ "/assets/img/qqsHzgqR_400x400.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Puppybot </h3>
