--- a/en/_includes/projects.html
+++ b/en/_includes/projects.html
@@ -25,3 +25,15 @@
     <a class="project-link" href="https://ytd-cloud.herokuapp.com/">Check it out</a>
   </div>
 </div>
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="puppy robot" src="/assets/img/qqsHzgqR_400x400.jpg" />
+  </div>
+  <div class="contents">
+    <h3> Puppybot </h3>
+
+    <p> Puppybot is a Twitter bot that retweets images of puppies! It can filter ugly images (like pictures of cats, for instance) using TensorFlow. It was developed using Python.</p>
+    <a class="project-link" href="https://twitter.com/apuppybot/">Pet</a>
+  </div>
+</div>
