--- a/en/_includes/projects.html
+++ b/en/_includes/projects.html
@@ -34,6 +34,6 @@
     <h3> Puppybot </h3>
 
     <p> Puppybot is a Twitter bot that retweets images of puppies! It can filter ugly images (like pictures of cats, for instance) using TensorFlow. It was developed using Python.</p>
-    <a class="project-link" href="https://twitter.com/apuppybot/">Pet me!</a>
+    <a class="project-link" href="https://twitter.com/apuppybot/">Pet zz</a>
   </div>
 </div>
